modularization nearly complete

--- a/test-page/index.html
+++ b/test-page/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <div id = 'title'>Animated Test Series</div>
+        <div id = 'title'>Animated Time Series</div>
         <div id = 'subtitle'>Test Page</div>
         <div id = 'description'>
         </div>
