--- a/test-page/index.html
+++ b/test-page/index.html
@@ -15,6 +15,8 @@
         <div id = 'title'>Animated Time Series</div>
         <div id = 'subtitle'>Test Page</div>
         <div id = 'description'>
+            Point color represents change from baseline.
+            Line color represents change from the previous visit.
         </div>
         <div id = 'container'></div>
     </body>
