--- a/test-page/index.html
+++ b/test-page/index.html
@@ -17,6 +17,7 @@
         <div id = 'description'>
             Point color represents change from baseline.
             Line color represents change from the previous visit.
+            Pie chart summarizes the population by change from baseline.
         </div>
         <div id = 'container'></div>
     </body>
