fix #12; fix #4; fix #14; fix #13

--- a/test-page/index.html
+++ b/test-page/index.html
@@ -14,11 +14,11 @@
     <body>
         <div id = 'title'>Animated Time Series</div>
         <div id = 'subtitle'>Test Page</div>
-        <div id = 'description'>
+        <!--div id = 'description'>
             Point color represents change from baseline.
             Line color represents change from the previous visit.
             Pie chart summarizes the population by change from baseline.
-        </div>
+        </div-->
         <div id = 'container'></div>
     </body>
 
