--- a/test-page/index.html
+++ b/test-page/index.html
@@ -4,9 +4,11 @@
         <title>Animated Time Series: Test Page</title>
         <meta http-equiv = 'Content-Type' content = 'text/html; charset = utf-8'>
 
-        <script type = 'text/javascript' src = 'https://cdn.jsdelivr.net/npm/d3@6/dist/d3.min.js'></script>
-        <script type = 'text/javascript' src = '../index.js'></script>
+        <script src = 'https://cdn.jsdelivr.net/npm/d3@6/dist/d3.min.js'></script>
+        <script src = 'https://cdn.jsdelivr.net/npm/slim-select@1.26.1/dist/slimselect.min.js'></script> 
+        <script src = '../index.js'></script>
 
+        <link rel = 'stylesheet' type = 'text/css' href = 'https://cdn.jsdelivr.net/npm/slim-select@1.26.1/dist/slimselect.min.css'>
         <link type = 'text/css' rel = 'stylesheet' href = '../index.css'>
         <link type = 'text/css' rel = 'stylesheet' href = './index.css'>
     </head>
