--- a/test-page/mean/index.html
+++ b/test-page/mean/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Animated Time Series: By ID</title>
+        <title>Animated Time Series: Mean</title>
         <meta http-equiv = 'Content-Type' content = 'text/html; charset = utf-8'>
 
         <script src = 'https://cdn.jsdelivr.net/npm/d3@6/dist/d3.min.js'></script>
@@ -13,7 +13,7 @@
 
     <body>
         <div id = 'title'>Animated Time Series</div>
-        <div id = 'subtitle'>By ID</div>
+        <div id = 'subtitle'>Mean</div>
         <!--div id = 'description'>
             Point color represents change from baseline.
             Line color represents change from the previous visit.
