--- a/test-page/index.html
+++ b/test-page/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv = 'Content-Type' content = 'text/html; charset = utf-8'>
 
         <script src = 'https://cdn.jsdelivr.net/npm/d3@6/dist/d3.min.js'></script>
+        <script src = '//cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js'></script>
         <script src = '../index.js'></script>
 
         <link type = 'text/css' rel = 'stylesheet' href = '../index.css'>
